fixed text wrapping issue for header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,7 +140,7 @@ header {
     }
 
     #city-buttons {
-        max-height: calc(100vh - 455px);
+        max-height: calc(100vh - 510px);
     }
 
     #current-city {
@@ -159,9 +159,15 @@ header {
     }
 }
 
-@media only screen and (max-width: 420px) {
+@media only screen and (max-width: 450px) {
 
     header {
+        padding: 0.5rem;
         text-align: center;
+        font-size: 2.5rem;
+    }
+
+    h2 {
+        font-size: 1.5rem;
     }
 }
